--- a/archives/toutiao-search/2023-10-24.md
+++ b/archives/toutiao-search/2023-10-24.md
@@ -1,55 +1,68 @@
 # 2023-10-24
 
-共 59 条
+共 68 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Oct 24 2023 01:00:56 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Oct 24 2023 02:00:59 GMT+0800 (China Standard Time) -->
 1. [原中央委员落马两个月后下属也被查](https://so.toutiao.com/search?keyword=原中央委员落马两个月后下属也被查)
-1. [为买华为Mate 60顾客购买问界新车](https://so.toutiao.com/search?keyword=为买华为Mate+60顾客购买问界新车)
-1. [多陪陪他们 趁一切正好](https://so.toutiao.com/search?keyword=多陪陪他们+趁一切正好)
 1. [狗咬女童事件千名捐款网友申请退款](https://so.toutiao.com/search?keyword=狗咬女童事件千名捐款网友申请退款)
+1. [多陪陪他们 趁一切正好](https://so.toutiao.com/search?keyword=多陪陪他们+趁一切正好)
 1. [青岛啤酒董事会就小便门发布公告](https://so.toutiao.com/search?keyword=青岛啤酒董事会就小便门发布公告)
-1. [以军将对加沙发动持续3个月地面攻势](https://so.toutiao.com/search?keyword=以军将对加沙发动持续3个月地面攻势)
-1. [美国28岁女保姆性侵8月大女婴](https://so.toutiao.com/search?keyword=美国28岁女保姆性侵8月大女婴)
 1. [女子举报嫂子身为公职人员婚内出轨](https://so.toutiao.com/search?keyword=女子举报嫂子身为公职人员婚内出轨)
-1. [“长沙交警执法时推倒电动车”系谣言](https://so.toutiao.com/search?keyword=“长沙交警执法时推倒电动车”系谣言)
-1. [iPhone 15全系降价](https://so.toutiao.com/search?keyword=iPhone+15全系降价)
-1. [加沙：废墟上的救援](https://so.toutiao.com/search?keyword=加沙：废墟上的救援)
-1. [揭秘哈马斯大量武器来源](https://so.toutiao.com/search?keyword=揭秘哈马斯大量武器来源)
-1. [中央汇金：买入ETF并将继续增持](https://so.toutiao.com/search?keyword=中央汇金：买入ETF并将继续增持)
-1. [外媒称加沙经历最血腥夜晚](https://so.toutiao.com/search?keyword=外媒称加沙经历最血腥夜晚)
-1. [华为辟谣将发射万枚6G移动低轨卫星](https://so.toutiao.com/search?keyword=华为辟谣将发射万枚6G移动低轨卫星)
-1. [陈国豪首秀炸了](https://so.toutiao.com/search?keyword=陈国豪首秀炸了)
-1. [周杰伦演唱会抢镜女粉丝回应](https://so.toutiao.com/search?keyword=周杰伦演唱会抢镜女粉丝回应)
+1. [以军将对加沙发动持续3个月地面攻势](https://so.toutiao.com/search?keyword=以军将对加沙发动持续3个月地面攻势)
 1. [曝蒋大为武汉商演遭遇冷场](https://so.toutiao.com/search?keyword=曝蒋大为武汉商演遭遇冷场)
-1. [女子环球自驾抵达巴塞罗那车窗被砸](https://so.toutiao.com/search?keyword=女子环球自驾抵达巴塞罗那车窗被砸)
-1. [男童因家中无人照看从5楼坠落](https://so.toutiao.com/search?keyword=男童因家中无人照看从5楼坠落)
-1. [胡锡进谈A股大跌：应对市场信心抄底](https://so.toutiao.com/search?keyword=胡锡进谈A股大跌：应对市场信心抄底)
-1. [富士康遭查 岛内议论纷纷](https://so.toutiao.com/search?keyword=富士康遭查+岛内议论纷纷)
+1. [iPhone 15全系降价](https://so.toutiao.com/search?keyword=iPhone+15全系降价)
+1. [“长沙交警执法时推倒电动车”系谣言](https://so.toutiao.com/search?keyword=“长沙交警执法时推倒电动车”系谣言)
 1. [男子殴打妻子致死被判死缓](https://so.toutiao.com/search?keyword=男子殴打妻子致死被判死缓)
-1. [专家：美国不敢在台海打“第三仗”](https://so.toutiao.com/search?keyword=专家：美国不敢在台海打“第三仗”)
-1. [富士康被查有何玄机](https://so.toutiao.com/search?keyword=富士康被查有何玄机)
-1. [于和伟说莫言才是我的yyds](https://so.toutiao.com/search?keyword=于和伟说莫言才是我的yyds)
+1. [被指责“犯下战争罪” 以军方反驳](https://so.toutiao.com/search?keyword=被指责“犯下战争罪”+以军方反驳)
+1. [以防长：对加沙的攻势或持续三个月](https://so.toutiao.com/search?keyword=以防长：对加沙的攻势或持续三个月)
+1. [揭秘哈马斯大量武器来源](https://so.toutiao.com/search?keyword=揭秘哈马斯大量武器来源)
+1. [美国28岁女保姆性侵8月大女婴](https://so.toutiao.com/search?keyword=美国28岁女保姆性侵8月大女婴)
+1. [外媒称加沙经历最血腥夜晚](https://so.toutiao.com/search?keyword=外媒称加沙经历最血腥夜晚)
 1. [我国发现首个千亿方深煤层大气田](https://so.toutiao.com/search?keyword=我国发现首个千亿方深煤层大气田)
+1. [中央汇金：买入ETF并将继续增持](https://so.toutiao.com/search?keyword=中央汇金：买入ETF并将继续增持)
+1. [于和伟说莫言才是我的yyds](https://so.toutiao.com/search?keyword=于和伟说莫言才是我的yyds)
 1. [司机将他人顶挡风玻璃上行驶百公里](https://so.toutiao.com/search?keyword=司机将他人顶挡风玻璃上行驶百公里)
-1. [芯片管制再升级 美国到底在怕什么](https://so.toutiao.com/search?keyword=芯片管制再升级+美国到底在怕什么)
+1. [陈国豪首秀炸了](https://so.toutiao.com/search?keyword=陈国豪首秀炸了)
+1. [胡锡进谈A股大跌：应对市场信心抄底](https://so.toutiao.com/search?keyword=胡锡进谈A股大跌：应对市场信心抄底)
+1. [富士康被查有何玄机](https://so.toutiao.com/search?keyword=富士康被查有何玄机)
+1. [周杰伦演唱会抢镜女粉丝回应](https://so.toutiao.com/search?keyword=周杰伦演唱会抢镜女粉丝回应)
+1. [男童因家中无人照看从5楼坠落](https://so.toutiao.com/search?keyword=男童因家中无人照看从5楼坠落)
+1. [富士康遭查 岛内议论纷纷](https://so.toutiao.com/search?keyword=富士康遭查+岛内议论纷纷)
 1. [网友吐槽上海地铁“板凳族”](https://so.toutiao.com/search?keyword=网友吐槽上海地铁“板凳族”)
+1. [寒武纪三年内亏损近40亿](https://so.toutiao.com/search?keyword=寒武纪三年内亏损近40亿)
+1. [芯片管制再升级 美国到底在怕什么](https://so.toutiao.com/search?keyword=芯片管制再升级+美国到底在怕什么)
 1. [俄狙击手夜间狙击乌军视频曝光](https://so.toutiao.com/search?keyword=俄狙击手夜间狙击乌军视频曝光)
-1. [《困兽》广州路演](https://so.toutiao.com/search?keyword=《困兽》广州路演)
-1. [买1.6万黄金1小时后换款缩水5600](https://so.toutiao.com/search?keyword=买1.6万黄金1小时后换款缩水5600)
-1. [曝华为Mate60 Pro溢价降低](https://so.toutiao.com/search?keyword=曝华为Mate60+Pro溢价降低)
 1. [女生晒自己大一和研一区别](https://so.toutiao.com/search?keyword=女生晒自己大一和研一区别)
-1. [外交部：欢迎澳大利亚总理访华](https://so.toutiao.com/search?keyword=外交部：欢迎澳大利亚总理访华)
-1. [刘震云：一地鸡毛是正常的生活状态](https://so.toutiao.com/search?keyword=刘震云：一地鸡毛是正常的生活状态)
+1. [​辽宁阜新煤矿事故90人被追责](https://so.toutiao.com/search?keyword=​辽宁阜新煤矿事故90人被追责)
+1. [女子环球自驾抵达巴塞罗那车窗被砸](https://so.toutiao.com/search?keyword=女子环球自驾抵达巴塞罗那车窗被砸)
+1. [华为辟谣将发射万枚6G移动低轨卫星](https://so.toutiao.com/search?keyword=华为辟谣将发射万枚6G移动低轨卫星)
 1. [男子性侵13岁女孩称老婆要从小培养](https://so.toutiao.com/search?keyword=男子性侵13岁女孩称老婆要从小培养)
-1. [印度女子伙同情人杀夫骗保被判绞刑](https://so.toutiao.com/search?keyword=印度女子伙同情人杀夫骗保被判绞刑)
 1. [胡锡进：撒尿事件对企业形象是恐袭](https://so.toutiao.com/search?keyword=胡锡进：撒尿事件对企业形象是恐袭)
-1. [中纪委通报：蔡乐才接受审查调查](https://so.toutiao.com/search?keyword=中纪委通报：蔡乐才接受审查调查)
+1. [全国房价比峰顶下降16%](https://so.toutiao.com/search?keyword=全国房价比峰顶下降16%)
+1. [《困兽》广州路演](https://so.toutiao.com/search?keyword=《困兽》广州路演)
+1. [俄媒：俄军至少25个师投入秋季攻势](https://so.toutiao.com/search?keyword=俄媒：俄军至少25个师投入秋季攻势)
+1. [塞尔维亚：谴责威胁中国统一的企图](https://so.toutiao.com/search?keyword=塞尔维亚：谴责威胁中国统一的企图)
+1. [为买华为Mate 60顾客购买问界新车](https://so.toutiao.com/search?keyword=为买华为Mate+60顾客购买问界新车)
+1. [买1.6万黄金1小时后换款缩水5600](https://so.toutiao.com/search?keyword=买1.6万黄金1小时后换款缩水5600)
+1. [专家：警惕碧桂园重蹈恒大覆辙](https://so.toutiao.com/search?keyword=专家：警惕碧桂园重蹈恒大覆辙)
+1. [适合高胆固醇人群的5条饮食建议](https://so.toutiao.com/search?keyword=适合高胆固醇人群的5条饮食建议)
 1. [火锅店老板娘化身机器人给顾客敬酒](https://so.toutiao.com/search?keyword=火锅店老板娘化身机器人给顾客敬酒)
+1. [券商：A股悲观情绪已步入极值区域](https://so.toutiao.com/search?keyword=券商：A股悲观情绪已步入极值区域)
+1. [外交部：欢迎澳大利亚总理访华](https://so.toutiao.com/search?keyword=外交部：欢迎澳大利亚总理访华)
+1. [国务院将对16个省份实地督查](https://so.toutiao.com/search?keyword=国务院将对16个省份实地督查)
+1. [一家三口相继感染支原体肺炎](https://so.toutiao.com/search?keyword=一家三口相继感染支原体肺炎)
+1. [纳米压印技术能取代光刻机吗](https://so.toutiao.com/search?keyword=纳米压印技术能取代光刻机吗)
+1. [《酱园弄杀夫案》或成最大赢家](https://so.toutiao.com/search?keyword=《酱园弄杀夫案》或成最大赢家)
+1. [加沙：废墟上的救援](https://so.toutiao.com/search?keyword=加沙：废墟上的救援)
+1. [专家：美国不敢在台海打“第三仗”](https://so.toutiao.com/search?keyword=专家：美国不敢在台海打“第三仗”)
+1. [曝华为Mate60 Pro溢价降低](https://so.toutiao.com/search?keyword=曝华为Mate60+Pro溢价降低)
+1. [刘震云：一地鸡毛是正常的生活状态](https://so.toutiao.com/search?keyword=刘震云：一地鸡毛是正常的生活状态)
+1. [印度女子伙同情人杀夫骗保被判绞刑](https://so.toutiao.com/search?keyword=印度女子伙同情人杀夫骗保被判绞刑)
+1. [中纪委通报：蔡乐才接受审查调查](https://so.toutiao.com/search?keyword=中纪委通报：蔡乐才接受审查调查)
 1. [中方愿同不丹推动边界谈判实现建交](https://so.toutiao.com/search?keyword=中方愿同不丹推动边界谈判实现建交)
 1. [老师称反映问题被约谈并向领导道歉](https://so.toutiao.com/search?keyword=老师称反映问题被约谈并向领导道歉)
 1. [24岁产妇产后出血昏迷50多天离世](https://so.toutiao.com/search?keyword=24岁产妇产后出血昏迷50多天离世)
-1. [国务院将对16个省份实地督查](https://so.toutiao.com/search?keyword=国务院将对16个省份实地督查)
 1. [泡水车流向二手市场 倒卖利润超20%](https://so.toutiao.com/search?keyword=泡水车流向二手市场+倒卖利润超20%)
 1. [网友感慨安葬父亲后此生不再是孩子](https://so.toutiao.com/search?keyword=网友感慨安葬父亲后此生不再是孩子)
 1. [媒体晒文班亚马大帽维金斯高清照](https://so.toutiao.com/search?keyword=媒体晒文班亚马大帽维金斯高清照)
@@ -58,9 +71,5 @@
 1. [286斤女生硬挤坐高铁二等座引争议](https://so.toutiao.com/search?keyword=286斤女生硬挤坐高铁二等座引争议)
 1. [CBA常规赛：新疆95-88江苏](https://so.toutiao.com/search?keyword=CBA常规赛：新疆95-88江苏)
 1. [曝巴萨正努力让吉乌报入欧冠B名单](https://so.toutiao.com/search?keyword=曝巴萨正努力让吉乌报入欧冠B名单)
-1. [全国房价比峰顶下降16%](https://so.toutiao.com/search?keyword=全国房价比峰顶下降16%)
-1. [寒武纪三年内亏损近40亿](https://so.toutiao.com/search?keyword=寒武纪三年内亏损近40亿)
 1. [《问心》周筱风陈玥分手](https://so.toutiao.com/search?keyword=《问心》周筱风陈玥分手)
-1. [纳米压印技术能取代光刻机吗](https://so.toutiao.com/search?keyword=纳米压印技术能取代光刻机吗)
-1. [一家三口相继感染支原体肺炎](https://so.toutiao.com/search?keyword=一家三口相继感染支原体肺炎)
 <!-- END TOUTIAO -->
